# MongooseVulkanEngine

./: .gitignore  CMakeLists.txt  README.md  compileShaders.bat  compileShaders.sh  run.sh
app/: CMakeLists.txt
app/src/: demo_application.cpp  demo_application.h  demo_window.cpp  demo_window.h  main.cpp
app/src/application/: demo_application.cpp  demo_application.h  demo_window.cpp  demo_window.h
app/src/ui/: ui.h
engine/: CMakeLists.txt
engine/include/application/: application.h  window.h
engine/include/input/: camera_controller.h  input.h
engine/include/math/: math.h  vec3.h
engine/include/memory/: resource_pool.h
engine/include/renderer/: bitmap.h  frame_graph.h  light.h  render_graph.h  scene.h  shader_cache.h  texture_atlas.h
engine/include/renderer/frame_graph/: frame_graph.h  frame_graph_renderpass.h
engine/include/renderer/graph/: frame_graph.h  frame_graph_renderpass.h
engine/include/renderer/vulkan/: imgui_vulkan.h  vulkan_buffer.h  vulkan_cube_map_texture.h  vulkan_descriptor_set_layout.h  vulkan_descriptor_writer.h  vulkan_device.h  vulkan_framebuffer.h  vulkan_gbuffer.h  vulkan_image.h  vulkan_material.h  vulkan_mesh.h  vulkan_pipeline.h  vulkan_reflection_probe.h  vulkan_renderer.h  vulkan_renderpass.h  vulkan_shadow_map.h  vulkan_skybox.h  vulkan_swapchain.h  vulkan_texture.h  vulkan_utils.h
engine/include/renderer/vulkan/lighting/: irradiance_map_generator.h  reflection_probe_generator.h
engine/include/renderer/vulkan/pass/: gbufferPass.h  infinite_grid_pass.h  lighting_pass.h  present_pass.h  render_pass.h  shadow_map_pass.h  skybox_pass.h  ui_pass.h  vulkan_pass.h
engine/include/renderer/vulkan/pass/lighting/: brdf_lut_pass.h  irradiance_map_pass.h  prefilter_map_pass.h
engine/include/renderer/vulkan/pass/post_processing/: ssao_pass.h  tone_mapping_pass.h
engine/include/resource/: resource.h  resource_manager.h
engine/include/resource/loaders/: gltf_loader.h
engine/include/ui/: ui.h
engine/include/util/: core.h  thread_pool.h  utils.h
engine/src/application/: application.cpp  window.cpp
engine/src/input/: camera_controller.cpp
engine/src/memory/: resource_pool.cpp
engine/src/renderer/: camera.cpp  frame_graph.cpp  render_graph.cpp  shader_cache.cpp
engine/src/renderer/graph/: frame_graph.cpp  frame_graph_renderpass.cpp
engine/src/renderer/vulkan/: imgui_vulkan.cpp  vulkan_buffer.cpp  vulkan_cube_map_texture.cpp  vulkan_descriptor_set_layout.cpp  vulkan_descriptor_writer.cpp  vulkan_device.cpp  vulkan_framebuffer.cpp  vulkan_gbuffer.cpp  vulkan_image.cpp  vulkan_material.cpp  vulkan_mesh.cpp  vulkan_pipeline.cpp  vulkan_reflection_probe.cpp  vulkan_renderer.cpp  vulkan_renderpass.cpp  vulkan_shadow_map.cpp  vulkan_skybox.cpp  vulkan_texture.cpp
engine/src/renderer/vulkan/frame_graph/: frame_graph.cpp  frame_graph_renderpass.cpp
engine/src/renderer/vulkan/lighting/: irradiance_map_generator.cpp  reflection_probe_generator.cpp
engine/src/renderer/vulkan/pass/: gbufferPass.cpp  infinite_grid_pass.cpp  lighting_pass.cpp  present_pass.cpp  render_pass.cpp  shadow_map_pass.cpp  skybox_pass.cpp  ui_pass.cpp
engine/src/renderer/vulkan/pass/lighting/: brdf_lut_pass.cpp  irradiance_map_pass.cpp  prefilter_map_pass.cpp
engine/src/renderer/vulkan/pass/post_processing/: ssao_pass.cpp  tone_mapping_pass.cpp
engine/src/resource/: resource_manager.cpp
engine/src/resource/loaders/: gltf_loader.cpp  obj_loader.cpp
engine/src/util/: thread_pool.cpp
lib/include/application/: window.h
lib/include/input/: camera_controller.h
lib/include/math/: color.h  hitable.h  math.h  ray.h  vec3.h
lib/include/memory/: resource_pool.h
lib/include/renderer/: bitmap.h  camera.h  light.h  mesh.h  render_graph.h  shader_cache.h
lib/include/resource/: resource.h  resource_manager.h
lib/include/util/: filesystem.h  log.h  timer.h
lib/src/application/: application.cpp  window.cpp
lib/src/input/: camera_controller.cpp  input.cpp
lib/src/memory/: resource_pool.cpp
lib/src/renderer/: camera.cpp  render_graph.cpp  renderer.cpp  shader_cache.cpp
lib/src/resource/: resource_manager.cpp
lib/src/util/: filesystem.cpp  log.cpp
shader/: shader.metal
shader/glsl/: base-pass.vert  brdf.frag  brdf.vert  cubemap.vert  depth_only.vert  empty.frag  equirectangularToCubemap.frag  equirectangularToCubemap.vert  gbuffer.frag  gbuffer.vert  infinite_grid.frag  infinite_grid.vert  irradiance_convolution.frag  lighting-pass.frag  post_processing_box_blur.frag  post_processing_ssao.frag  post_processing_tone_mapping.frag  prefilter.frag  quad.frag  quad.vert  screen.frag  screen.vert  shader.frag  shader.vert  shadow_map.vert  skybox.frag  skybox.vert
shader/glsl/includes/: common.glslh  pbr_functions.glslh  shadow_mapping.glslh
src/: main.cpp
src/application/: application.cpp  application.h  imgui_vulkan.cpp  imgui_vulkan.h  window.cpp  window.h
src/input/: camera_controller.cpp  camera_controller.h  input.cpp  input.h
src/math/: color.h  math.h  ray.h  vec3.h
src/memory/: resource_pool.cpp  resource_pool.h
src/platform/macos/: macosApplication.cpp  macosApplication.h  macosVulkanApplication.cpp  macosVulkanApplication.h  macosVulkanWindow.cpp  macosVulkanWindow.h  macosWindow.cpp  macosWindow.h  macos_application.cpp  macos_application.h  macos_window.cpp  macos_window.h
src/platform/windows/: windowsApplication.cpp  windowsApplication.h  windowsWindow.cpp  windowsWindow.h  windows_application.cpp  windows_application.h  windows_window.cpp
src/renderer/: bitmap.h  camera.cpp  camera.h  components.h  light.h  mesh.cpp  mesh.h  metalRenderer.cpp  metalRenderer.h  metalShader.cpp  metalShader.h  renderer.cpp  renderer.h  scene.h  shader.cpp  shader.h  shader_cache.cpp  shader_cache.h  skybox.cpp  skybox.h  test_scene.h  transform.h
src/renderer/metal/: metalRenderer.cpp  metalRenderer.h  metalShader.h
src/renderer/vulkan/: imgui_vulkan.cpp  (+56 more)
src/resource/: resource.h  resource_manager.cpp  resource_manager.h
src/ui/: ui.h
src/util/: core.h  filesystem.cpp  filesystem.h  log.cpp  log.h  timer.h  vulkanUtils.h
(+84 files in other folders)
